--- a/qe_gateway/index.html
+++ b/qe_gateway/index.html
@@ -10,88 +10,110 @@
 <body>
     <div class="container">
         <h1 id="title">QE Gateway</h1>
+        <h2>Jenkins</h2>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4  g-4">
             <div class="col">
-                <div class="card h-100">
-                    <div class="card-header">Test results for latest server builds</div>
-                    <img src="img/greenboard.png" class="card-img-bottom">
-                    <div class="card-body d-flex flex-column">
-                        <a target="_blank" href="http://greenboard.hq.couchbase.com/" class="mt-auto btn btn-secondary">Greenboard</a>
+                <a target="_blank" href="http://qa.sc.couchbase.com">
+                    <div class="card h-100">
+                        <div class="card-header">Jenkins for server</div>
+                        <img src="img/server_jenkins.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="http://qa.sc.couchbase.com" class="mt-auto btn btn-secondary">Server Jenkins</a>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col">
-                <div class="card h-100">
-                    <div class="card-header">Jenkins for server</div>
-                    <img src="img/server_jenkins.png" class="card-img-bottom">
-                    <div class="card-body d-flex flex-column">
-                        <a target="_blank" href="http://qa.sc.couchbase.com" class="mt-auto btn btn-secondary">Server Jenkins</a>
+                <a target="_blank" href="http://perf.jenkins.couchbase.com/">
+                    <div class="card h-100">
+                        <div class="card-header">Jenkins for performace</div>
+                        <img src="img/performance_jenkins.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="http://perf.jenkins.couchbase.com/" class="mt-auto btn btn-secondary">Performance Jenkins</a>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col">
-                <div class="card h-100">
-                    <div class="card-header">Dashboard showing performace metrics</div>
-                    <img src="img/performance_dashboard.png" class="card-img-bottom">
-                    <div class="card-body d-flex flex-column">
-                        <a target="_blank" href="http://showfast.sc.couchbase.com/" class="mt-auto btn btn-secondary">Performance Dashboard</a>
+                <a target="_blank" href="http://server.jenkins.couchbase.com/">
+                    <div class="card h-100">
+                        <div class="card-header">Jenkins for build</div>
+                        <img src="img/performance_jenkins.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="http://server.jenkins.couchbase.com/" class="mt-auto btn btn-secondary">Build Jenkins</a>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col">
-                <div class="card h-100">
-                    <div class="card-header">Jenkins for performace</div>
-                    <img src="img/performance_jenkins.png" class="card-img-bottom">
-                    <div class="card-body d-flex flex-column">
-                        <a target="_blank" href="http://perf.jenkins.couchbase.com/" class="mt-auto btn btn-secondary">Performance Jenkins</a>
+                <a target="_blank" href="http://uberjenkins.sc.couchbase.com:8080/">
+                    <div class="card h-100">
+                        <div class="card-header">Jenkins for mobile</div>
+                        <img src="img/performance_jenkins.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="http://uberjenkins.sc.couchbase.com:8080/" class="mt-auto btn btn-secondary">Mobile Jenkins</a>
+                        </div>
                     </div>
-                </div>
+                </a>
+            </div>
+        </div>
+        <h2>Other</h2>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4  g-4">
+            <div class="col">
+                <a target="_blank" href="http://greenboard.hq.couchbase.com/">
+                    <div class="card h-100">
+                        <div class="card-header">Test results for latest server builds</div>
+                        <img src="img/greenboard.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="http://greenboard.hq.couchbase.com/" class="mt-auto btn btn-secondary">Functional testing dashboard</a>
+                        </div>
+                    </div>
+                </a>
             </div>
             <div class="col">
-                <div class="card h-100">
-                    <div class="card-header">Metrics for server and mobile regression testing</div>
-                    <img src="img/observability_dashboards.png" class="card-img-bottom">
-                    <div class="card-body d-flex flex-column">
-                        <a target="_blank" href="http://172.23.104.178:3000" class="mt-auto btn btn-secondary">Observability Dashboards</a>
+                <a target="_blank" href="http://showfast.sc.couchbase.com/">
+                    <div class="card h-100">
+                        <div class="card-header">Dashboard showing performace metrics</div>
+                        <img src="img/performance_dashboard.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="http://showfast.sc.couchbase.com/" class="mt-auto btn btn-secondary">Performance Dashboard</a>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col">
-                <div class="card h-100">
-                    <div class="card-header">Jenkins for build</div>
-                    <img src="img/performance_jenkins.png" class="card-img-bottom">
-                    <div class="card-body d-flex flex-column">
-                        <a target="_blank" href="http://server.jenkins.couchbase.com/" class="mt-auto btn btn-secondary">Build Jenkins</a>
+                <a target="_blank" href="http://172.23.104.178:3000">
+                    <div class="card h-100">
+                        <div class="card-header">Metrics for server and mobile regression testing</div>
+                        <img src="img/observability_dashboards.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="http://172.23.104.178:3000" class="mt-auto btn btn-secondary">Observability Dashboards</a>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col">
-                <div class="card h-100">
-                    <div class="card-header">Jenkins for mobile</div>
-                    <img src="img/performance_jenkins.png" class="card-img-bottom">
-                    <div class="card-body d-flex flex-column">
-                        <a target="_blank" href="http://uberjenkins.sc.couchbase.com:8080/" class="mt-auto btn btn-secondary">Mobile Jenkins</a>
+                <a target="_blank" href="https://sites.google.com/couchbase.com/hub/home-select-team/engineering/qe-performance-build">
+                    <div class="card h-100">
+                        <div class="card-header">Hub</div>
+                        <img src="img/google_site.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title"></h5>
+                            <a target="_blank" href="https://sites.google.com/couchbase.com/hub/home-select-team/engineering/qe-performance-build" class="mt-auto btn btn-secondary">QE, Performance & Build Hub</a>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col">
-                <div class="card h-100">
-                    <div class="card-header">Hub</div>
-                    <img src="img/google_site.png" class="card-img-bottom">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title"></h5>
-                        <a target="_blank" href="https://sites.google.com/couchbase.com/hub/home-select-team/engineering/qe-performance-build" class="mt-auto btn btn-secondary">QE, Performance & Build Hub</a>
+                <a target="_blank" href="http://cleancode.service.couchbase.com/">
+                    <div class="card h-100">
+                        <div class="card-header">Continuous Code Quality</div>
+                        <img src="img/continuous_code_quality.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="http://cleancode.service.couchbase.com/" class="mt-auto btn btn-secondary">SCA</a>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <div class="card-header">Continuous Code Quality</div>
-                    <img src="img/continuous_code_quality.png" class="card-img-bottom">
-                    <div class="card-body d-flex flex-column">
-                        <a target="_blank" href="http://cleancode.service.couchbase.com/" class="mt-auto btn btn-secondary">SCA</a>
-                    </div>
-                </div>
+                </a>
             </div>
         </div>
     </div>
