--- a/qe_gateway/index.html
+++ b/qe_gateway/index.html
@@ -10,54 +10,7 @@
 <body>
     <div class="container">
         <h1 id="title">QE Gateway</h1>
-        <h2>Jenkins</h2>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4  g-4">
-            <div class="col">
-                <a target="_blank" href="http://qa.sc.couchbase.com">
-                    <div class="card h-100">
-                        <div class="card-header">Jenkins for server</div>
-                        <img src="img/server_jenkins.png" class="card-img-bottom">
-                        <div class="card-body d-flex flex-column">
-                            <a target="_blank" href="http://qa.sc.couchbase.com" class="mt-auto btn btn-secondary">Server Jenkins</a>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col">
-                <a target="_blank" href="http://perf.jenkins.couchbase.com/">
-                    <div class="card h-100">
-                        <div class="card-header">Jenkins for performace</div>
-                        <img src="img/performance_jenkins.png" class="card-img-bottom">
-                        <div class="card-body d-flex flex-column">
-                            <a target="_blank" href="http://perf.jenkins.couchbase.com/" class="mt-auto btn btn-secondary">Performance Jenkins</a>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col">
-                <a target="_blank" href="http://server.jenkins.couchbase.com/">
-                    <div class="card h-100">
-                        <div class="card-header">Jenkins for build</div>
-                        <img src="img/performance_jenkins.png" class="card-img-bottom">
-                        <div class="card-body d-flex flex-column">
-                            <a target="_blank" href="http://server.jenkins.couchbase.com/" class="mt-auto btn btn-secondary">Build Jenkins</a>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col">
-                <a target="_blank" href="http://uberjenkins.sc.couchbase.com:8080/">
-                    <div class="card h-100">
-                        <div class="card-header">Jenkins for mobile</div>
-                        <img src="img/performance_jenkins.png" class="card-img-bottom">
-                        <div class="card-body d-flex flex-column">
-                            <a target="_blank" href="http://uberjenkins.sc.couchbase.com:8080/" class="mt-auto btn btn-secondary">Mobile Jenkins</a>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-        <h2>Other</h2>
+        <h2>Dashboards</h2>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4  g-4">
             <div class="col">
                 <a target="_blank" href="http://greenboard.hq.couchbase.com/">
@@ -116,6 +69,54 @@
                 </a>
             </div>
         </div>
+        <h2>Jenkins CI</h2>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4  g-4">
+            <div class="col">
+                <a target="_blank" href="http://qa.sc.couchbase.com">
+                    <div class="card h-100">
+                        <div class="card-header">Jenkins for server</div>
+                        <img src="img/server_jenkins.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="http://qa.sc.couchbase.com" class="mt-auto btn btn-secondary">Server Jenkins</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col">
+                <a target="_blank" href="http://perf.jenkins.couchbase.com/">
+                    <div class="card h-100">
+                        <div class="card-header">Jenkins for performace</div>
+                        <img src="img/performance_jenkins.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="http://perf.jenkins.couchbase.com/" class="mt-auto btn btn-secondary">Performance Jenkins</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col">
+                <a target="_blank" href="http://server.jenkins.couchbase.com/">
+                    <div class="card h-100">
+                        <div class="card-header">Jenkins for build</div>
+                        <img src="img/performance_jenkins.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="http://server.jenkins.couchbase.com/" class="mt-auto btn btn-secondary">Build Jenkins</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col">
+                <a target="_blank" href="http://uberjenkins.sc.couchbase.com:8080/">
+                    <div class="card h-100">
+                        <div class="card-header">Jenkins for mobile</div>
+                        <img src="img/performance_jenkins.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="http://uberjenkins.sc.couchbase.com:8080/" class="mt-auto btn btn-secondary">Mobile Jenkins</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
