Changing IP to dns name for dashboards link.

--- a/qe_gateway/index.html
+++ b/qe_gateway/index.html
@@ -35,12 +35,12 @@
                 </a>
             </div>
             <div class="col">
-                <a target="_blank" href="http://172.23.104.178:3000">
+                <a target="_blank" href="http://qe.service.couchbase.com:3000">
                     <div class="card h-100">
                         <div class="card-header">Metrics for server and mobile regression testing</div>
                         <img src="img/observability_dashboards.png" class="card-img-bottom">
                         <div class="card-body d-flex flex-column">
-                            <a target="_blank" href="http://172.23.104.178:3000" class="mt-auto btn btn-secondary">Observability Dashboards</a>
+                            <a target="_blank" href="http://qe.service.couchbase.com:3000" class="mt-auto btn btn-secondary">Observability Dashboards</a>
                         </div>
                     </div>
                 </a>
