--- a/qe_gateway/index.html
+++ b/qe_gateway/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QE Gateway</title>
+    <title>Couchbase QE Dashboards, Tools</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <div class="container">
-        <h1 id="title">QE Gateway</h1>
+        <h1 id="title">Couchbase QE</h1>
         <h2>Dashboards</h2>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4  g-4">
             <div class="col">
