CBQE-6552: QE service page - add more links

--- a/qe_gateway/index.html
+++ b/qe_gateway/index.html
@@ -48,11 +48,11 @@
             <div class="col">
                 <a target="_blank" href="https://sites.google.com/couchbase.com/hub/home-select-team/engineering/qe-performance-build">
                     <div class="card h-100">
-                        <div class="card-header">Hub</div>
+                        <div class="card-header">QE, Performance & Build Hub</div>
                         <img src="img/google_site.png" class="card-img-bottom">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title"></h5>
-                            <a target="_blank" href="https://sites.google.com/couchbase.com/hub/home-select-team/engineering/qe-performance-build" class="mt-auto btn btn-secondary">QE, Performance & Build Hub</a>
+                            <a target="_blank" href="https://sites.google.com/couchbase.com/hub/home-select-team/engineering/qe-performance-build" class="mt-auto btn btn-secondary">Newsletters</a>
                         </div>
                     </div>
                 </a>
@@ -64,6 +64,39 @@
                         <img src="img/continuous_code_quality.png" class="card-img-bottom">
                         <div class="card-body d-flex flex-column">
                             <a target="_blank" href="http://cleancode.service.couchbase.com/" class="mt-auto btn btn-secondary">SCA</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col">
+                <a target="_blank" href="http://changelog.build.couchbase.com/">
+                    <div class="card h-100">
+                        <div class="card-header">Change Log</div>
+                        <img src="img/changelog.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="http://changelog.build.couchbase.com/" class="mt-auto btn btn-secondary">Change Log</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col">
+                <a target="_blank" href="https://hub.internal.couchbase.com/confluence/display/QA/Forum+posts+by+QE+Perf+Build+Teams">
+                    <div class="card h-100">
+                        <div class="card-header">Forum Posts</div>
+                        <img src="img/forum_posts.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="https://hub.internal.couchbase.com/confluence/display/QA/Forum+posts+by+QE+Perf+Build+Teams" class="mt-auto btn btn-secondary">Forum Posts</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col">
+                <a target="_blank" href="https://hub.internal.couchbase.com/confluence/display/QA/QE+Brown+Bag+Sessions+and+Open+Discussions">
+                    <div class="card h-100">
+                        <div class="card-header">Brown Bag Sessions</div>
+                        <img src="img/brownbags.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="https://hub.internal.couchbase.com/confluence/display/QA/QE+Brown+Bag+Sessions+and+Open+Discussions" class="mt-auto btn btn-secondary">Brown Bag Sessions</a>
                         </div>
                     </div>
                 </a>
@@ -115,7 +148,85 @@
                     </div>
                 </a>
             </div>
+            <div class="col">
+                <a target="_blank" href="http://sdkbuilds.sc.couchbase.com/">
+                    <div class="card h-100">
+                        <div class="card-header">Jenkins for SDK Builds</div>
+                        <img src="img/sdkbuilds_jenkins.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="http://sdkbuilds.sc.couchbase.com/" class="mt-auto btn btn-secondary">SDK Builds Jenkins</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col">
+                <a target="_blank" href="http://sdk.jenkins.couchbase.com/">
+                    <div class="card h-100">
+                        <div class="card-header">Jenkins for SDK</div>
+                        <img src="img/sdk_jenkins.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="http://sdk.jenkins.couchbase.com/" class="mt-auto btn btn-secondary">SDK Jenkins</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col">
+                <a target="_blank" href="http://172.23.109.231/job/centos-systest-launcher/">
+                    <div class="card h-100">
+                        <div class="card-header">Jenkins for System Testing for Longevity</div>
+                        <img src="img/systemtest_longevity_jenkins.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="http://172.23.109.231/job/centos-systest-launcher/" class="mt-auto btn btn-secondary">Launcher 1</a>
+                            <a target="_blank" href="http://172.23.109.231/job/centos-systest-launcher-2/" class="mt-auto btn btn-secondary">Launcher 2</a>
+                            <a target="_blank" href="http://172.23.109.231/job/centos-systest-launcher-3/" class="mt-auto btn btn-secondary">Launcher 3</a>
+                            <a target="_blank" href="https://github.com/couchbaselabs/sequoia-provision/blob/master/ansible/hosts" class="mt-auto btn btn-secondary">Hosts</a>
+                        </div>
+                        
+                    </div>
+                </a>
+            </div>
+            <div class="col">
+                <a target="_blank" href="http://qa.sc.couchbase.com/job/component_systest_launcher/">
+                    <div class="card h-100">
+                        <div class="card-header">Jenkins for System Testing at Component</div>
+                        <img src="img/systemtest_component_jenkins.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="http://qa.sc.couchbase.com/job/component_systest_launcher/" class="mt-auto btn btn-secondary">Launcher 1</a>
+                            <a target="_blank" href="http://qa.sc.couchbase.com/job/component_systest_launcher_2/" class="mt-auto btn btn-secondary">Launcher 2</a>
+                            <a target="_blank" href="http://qa.sc.couchbase.com/job/component_systest_launcher_3/" class="mt-auto btn btn-secondary">Launcher 3</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
+        <h2>Tests</h2>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4  g-4">
+            <div class="col">
+                <a target="_blank" href="https://drive.google.com/drive/u/0/folders/1boqH4XAGFJ9hrAu0YxRhVd2bqKP3Kysi">
+                    <div class="card h-100">
+                        <div class="card-header">Functional Tests</div>
+                        <img src="img/tests_cc.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="https://drive.google.com/drive/u/0/folders/1boqH4XAGFJ9hrAu0YxRhVd2bqKP3Kysi" class="mt-auto btn btn-secondary">CheshireCat</a>
+                            <a target="_blank" href="https://drive.google.com/drive/u/0/folders/1FbD7dBMIx4l8jikxJqtfS_uK_6OvQHYH" class="mt-auto btn btn-secondary">MadHatter</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col">
+                <a target="_blank" href="https://hub.internal.couchbase.com/confluence/pages/viewpage.action?spaceKey=PM&title=Cheshire+Cat+System+testing">
+                    <div class="card h-100">
+                        <div class="card-header">System Tests</div>
+                        <img src="img/systemtests_cc.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="https://hub.internal.couchbase.com/confluence/pages/viewpage.action?spaceKey=PM&title=Cheshire+Cat+System+testing" class="mt-auto btn btn-secondary">CheshireCat</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        
+
 
     </div>
 </body>
