--- a/qe_gateway/index.html
+++ b/qe_gateway/index.html
@@ -204,7 +204,7 @@
             <div class="col">
                 <a target="_blank" href="https://drive.google.com/drive/u/0/folders/1boqH4XAGFJ9hrAu0YxRhVd2bqKP3Kysi">
                     <div class="card h-100">
-                        <div class="card-header">Functional Tests</div>
+                        <div class="card-header">Server Functional Tests</div>
                         <img src="img/tests_cc.png" class="card-img-bottom">
                         <div class="card-body d-flex flex-column">
                             <a target="_blank" href="https://drive.google.com/drive/u/0/folders/1boqH4XAGFJ9hrAu0YxRhVd2bqKP3Kysi" class="mt-auto btn btn-secondary">CheshireCat</a>
@@ -216,7 +216,7 @@
             <div class="col">
                 <a target="_blank" href="https://hub.internal.couchbase.com/confluence/pages/viewpage.action?spaceKey=PM&title=Cheshire+Cat+System+testing">
                     <div class="card h-100">
-                        <div class="card-header">System Tests</div>
+                        <div class="card-header">Server System Tests</div>
                         <img src="img/systemtests_cc.png" class="card-img-bottom">
                         <div class="card-body d-flex flex-column">
                             <a target="_blank" href="https://hub.internal.couchbase.com/confluence/pages/viewpage.action?spaceKey=PM&title=Cheshire+Cat+System+testing" class="mt-auto btn btn-secondary">CheshireCat</a>
@@ -225,8 +225,51 @@
                 </a>
             </div>
         </div>
-        
-
+        <h2>Cloud</h2>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4  g-4">
+            <div class="col">
+                <a target="_blank" href="https://drive.google.com/file/d/1v29jsJ4bcUgJI8tMOfDt1uwHS-P1NCED/view">
+                    <div class="card h-100">
+                        <div class="card-header">Cloud Testing</div>
+                        <img src="img/cloud_testing.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="https://drive.google.com/file/d/1v29jsJ4bcUgJI8tMOfDt1uwHS-P1NCED/view" class="mt-auto btn btn-secondary">Slides</a>
+                            <a target="_blank" href="http://review.couchbase.org/c/testrunner/+/137296" class="mt-auto btn btn-secondary">Test Repository</a>
+                            <a target="_blank" href="https://drive.google.com/file/d/1v29jsJ4bcUgJI8tMOfDt1uwHS-P1NCED/view" class="mt-auto btn btn-secondary">Demo</a>
+                            <a target="_blank" href="https://docs.google.com/document/d/1972_l4lMH2ybL841UFbO21znfR3Vi7A3EXbav6ffHls/view" class="mt-auto btn btn-secondary">Strategy Doc</a>
+                            <a target="_blank" href="https://hub.internal.couchbase.com/confluence/pages/viewpage.action?spaceKey=QA&title=Cloud+Test+Runtime+Guide" class="mt-auto btn btn-secondary">Setup</a>
+                            <a target="_blank" href="http://qa.sc.couchbase.com/job/cloudtest-run/" class="mt-auto btn btn-secondary">Jenkins Job</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col">
+                <a target="_blank" href="https://drive.google.com/file/d/1v29jsJ4bcUgJI8tMOfDt1uwHS-P1NCED/view">
+                    <div class="card h-100">
+                        <div class="card-header">DBaaS Manual Testing</div>
+                        <img src="img/cloud_dbaas_manual_testing.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="https://docs.google.com/document/d/13v7GDeZSvoih8TfnmrsZntDK8K9g6ZJbTflZAIlncqg/view" class="mt-auto btn btn-secondary">Phase 1</a>
+                            <a target="_blank" href="https://docs.google.com/document/d/1dgvPij1gsmDqHqIc5k00YxciMwLyfTTJHkUrLdg4VQI/view" class="mt-auto btn btn-secondary">Phase 2</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <h2>Interoperability</h2>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4  g-4">
+            <div class="col">
+                <a target="_blank" href="https://docs.google.com/presentation/d/121TrRcePZPAe63pw9lgJ78jstNQZ_xoWp9EUfgEczJ4/edit#slide=id.g9aa4b9d821_2_5">
+                    <div class="card h-100">
+                        <div class="card-header">XDCR</div>
+                        <img src="img/interop_xdcr_testing.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="https://docs.google.com/presentation/d/121TrRcePZPAe63pw9lgJ78jstNQZ_xoWp9EUfgEczJ4/edit#slide=id.g9aa4b9d821_2_5" class="mt-auto btn btn-secondary">Slides</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
 
     </div>
 </body>
