Fixing a couple of links

--- a/qe_gateway/index.html
+++ b/qe_gateway/index.html
@@ -233,7 +233,7 @@
                         <div class="card-header">Cloud Testing</div>
                         <img src="img/cloud_testing.png" class="card-img-bottom">
                         <div class="card-body d-flex flex-column">
-                            <a target="_blank" href="https://drive.google.com/file/d/1v29jsJ4bcUgJI8tMOfDt1uwHS-P1NCED/view" class="mt-auto btn btn-secondary">Slides</a>
+                            <a target="_blank" href="https://docs.google.com/presentation/d/1Hky-VMKDq4NvzmAKFE1hrRKTiMYABShHLC_U0cJPJ7U/view" class="mt-auto btn btn-secondary">Slides</a>
                             <a target="_blank" href="http://review.couchbase.org/c/testrunner/+/137296" class="mt-auto btn btn-secondary">Test Repository</a>
                             <a target="_blank" href="https://drive.google.com/file/d/1v29jsJ4bcUgJI8tMOfDt1uwHS-P1NCED/view" class="mt-auto btn btn-secondary">Demo</a>
                             <a target="_blank" href="https://docs.google.com/document/d/1972_l4lMH2ybL841UFbO21znfR3Vi7A3EXbav6ffHls/view" class="mt-auto btn btn-secondary">Strategy Doc</a>
@@ -259,12 +259,12 @@
         <h2>Interoperability</h2>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4  g-4">
             <div class="col">
-                <a target="_blank" href="https://docs.google.com/presentation/d/121TrRcePZPAe63pw9lgJ78jstNQZ_xoWp9EUfgEczJ4/edit#slide=id.g9aa4b9d821_2_5">
+                <a target="_blank" href="https://docs.google.com/presentation/d/121TrRcePZPAe63pw9lgJ78jstNQZ_xoWp9EUfgEczJ4/edit#slide=id.g7c65c320b4_1_241">
                     <div class="card h-100">
                         <div class="card-header">XDCR</div>
                         <img src="img/interop_xdcr_testing.png" class="card-img-bottom">
                         <div class="card-body d-flex flex-column">
-                            <a target="_blank" href="https://docs.google.com/presentation/d/121TrRcePZPAe63pw9lgJ78jstNQZ_xoWp9EUfgEczJ4/edit#slide=id.g9aa4b9d821_2_5" class="mt-auto btn btn-secondary">Slides</a>
+                            <a target="_blank" href="https://docs.google.com/presentation/d/121TrRcePZPAe63pw9lgJ78jstNQZ_xoWp9EUfgEczJ4/edit#slide=id.g7c65c320b4_1_241" class="mt-auto btn btn-secondary">Slides</a>
                         </div>
                     </div>
                 </a>
