Fixed SDK Jenkins

--- a/qe_gateway/index.html
+++ b/qe_gateway/index.html
@@ -173,10 +173,10 @@
             <div class="col">
                 <a target="_blank" href="http://sdkbuilds.sc.couchbase.com/">
                     <div class="card h-100">
-                        <div class="card-header">Build Jenkins for SDK</div>
+                        <div class="card-header">QE Jenkins for SDK</div>
                         <img src="img/sdkbuilds_jenkins.png" class="card-img-bottom">
                         <div class="card-body d-flex flex-column">
-                            <a target="_blank" href="http://sdkbuilds.sc.couchbase.com/" class="mt-auto btn btn-secondary">SDK Build Jenkins</a>
+                            <a target="_blank" href="http://sdkbuilds.sc.couchbase.com/" class="mt-auto btn btn-secondary">SDK QE Jenkins</a>
                         </div>
                     </div>
                 </a>
@@ -184,10 +184,10 @@
             <div class="col">
                 <a target="_blank" href="http://sdk.jenkins.couchbase.com/">
                     <div class="card h-100">
-                        <div class="card-header">QE Jenkins for SDK</div>
+                        <div class="card-header">Build Jenkins for SDK</div>
                         <img src="img/sdk_jenkins.png" class="card-img-bottom">
                         <div class="card-body d-flex flex-column">
-                            <a target="_blank" href="http://sdk.jenkins.couchbase.com/" class="mt-auto btn btn-secondary">SDK QE Jenkins</a>
+                            <a target="_blank" href="http://sdk.jenkins.couchbase.com/" class="mt-auto btn btn-secondary">SDK Build+QE Jenkins</a>
                         </div>
                     </div>
                 </a>
