Adding system testing dashboard

--- a/qe_gateway/index.html
+++ b/qe_gateway/index.html
@@ -24,6 +24,17 @@
                 </a>
             </div>
             <div class="col">
+                <a target="_blank" href="http://qe.service.couchbase.com:8080/">
+                    <div class="card h-100">
+                        <div class="card-header">Manage system testing clusters</div>
+                        <img src="img/systemtest_dashboard.png" class="card-img-bottom">
+                        <div class="card-body d-flex flex-column">
+                            <a target="_blank" href="http://qe.service.couchbase.com:8080/" class="mt-auto btn btn-secondary">QE System testing dashboard</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col">
                 <a target="_blank" href="http://showfast.sc.couchbase.com/">
                     <div class="card h-100">
                         <div class="card-header">Dashboard showing performace metrics</div>
